separate for run file or command from cmd